src/html/classic/css/gsa-style.css
/* ... */
.gb_window_part_content {
  background: #f9f9f9;
  border: 1px solid #7c7c7c;
  border-top: none;
  padding: 3px;
  text-align: left;
  font-size:12px;
}

.gb_window_part_content_no_pad {
  background: #f9f9f9;
  border: 1px solid #7c7c7c;
  border-top: none;
  position:relative;
  top:-5px;
}

.gb_window_error {
}

.gb_window_part_left_error {
  background: url('/img/style/window_dec_a_error.png') no-repeat;
  width:6px;
  height:32px;
  float:left;
  margin:0px;
}

.gb_window_part_center_error {
  background: url('/img/style/window_dec_b_error.png') repeat-x;
  background-color: #CC0000;
  height: 32px;
  color: #FFFFFF;
  font-weight: bold;
  padding-top:5px;
  text-align:left;
  margin:0px;
  font-size:13px;
}

.gb_window_part_right_error {
  background: url('/img/style/window_dec_c_error.png') no-repeat;
  width: 76px;
  height: 32px;
  float: right;
  margin:0px;
}

.gb_window_part_content_error {
  background: #fffac7;
  border: 1px solid #7c7c7c;
  border-top: none;
  padding: 5px;
  text-align: left;
  position:relative;
  top:-5px;
  font-size:12px;
}

.gb_error_dialog_container {
  display: table;
  width: 100vw;
  height: 100vh;
}

.gb_error_dialog_container > div {
  display:table-cell;
  vertical-align:middle;
}

.gb_error_dialog {
  margin-left:auto;
  margin-right:auto;
  width:500px;
}

/* END Window decorations */

#gb_header {
  height: 40px;
  background-color: #99CE48;
  padding: 0px 5px 0px 5px;
}

#gb_header > div {
  margin: auto;
}

/* Menu Bar */
#gb_menu {
  margin-bottom: 12px;
  background-color: #393637;
}

#gb_menu ul {
  list-style: none;
  margin: 0px;
  padding: 0px;
}

#gb_menu > ul > li {
  float:left;
  width: 14.2857143%; /* 100. / 7 */
}

#gb_menu ul > li:hover > a {
  background-color: #99ce48;
  color: #393637;
}

#gb_menu ul li a {
  display: block;
  height: 35px;
  line-height: 35px;
  font-size: 10px;
  color: #FFFFFF;
  text-decoration: none;
  font-weight: bold;
}

#gb_menu ul li ul {
  width: 255px;
  z-index: 6;
  list-style: none;
  position: absolute;
  margin-top: -1px;
  display:none;
  background: #FAFAFA;
  border: 1px solid #3A3A3A;
  -webkit-border-radius: 0px 0px 8px 8px;
  -moz-border-radius: 0px 0px 8px 8px;
  border-radius: 0px 0px 8px 8px;
}

#gb_menu ul li ul a {
  background: none;
  line-height: 22px;
  text-align: left;
  text-indent: 12px;
  color: #3A3A3A;
  width: 100%;
  height: 22px;
}

#gb_menu ul li ul .indent a {
  text-indent: 25px;
}

#gb_menu li:hover ul ul,
#gb_menu li:hover ul ul ul {
  display: none;
}

#gb_menu li:hover a,
#gb_menu li:hover ul,
#gb_menu li:hover ul li {
  display: block;
}

#gb_menu ul li ul a:hover {
  background: #99CE48;
}

#gb_menu ul li ul .last a:hover {
  -webkit-border-radius: 0px 0px 8px 8px;
  -moz-border-radius: 0px 0px 8px 8px;
  border-radius: 0px 0px 8px 8px;
}

div.empty_top_button {
  display: block;
  width: 128px;
  height: 35px;
  background-color: #393637;
  line-height: 35px;
  font-size: 10px;
  color: #FFFFFF;
  text-decoration: none;
  font-weight: bold;
}

div.first_button_overlay {
  border: 0px;
  width: 253px;
  height: 22px;
  position: absolute;
  top: 34px;
  left: 1px;
  z-index: 10;
  line-height: 35px;
  font-size: 10px;
  text-align:left;
  color: #FFFFFF;
  text-decoration: none;
  font-weight: bold;
  background: none;
  display: none;
}

#gb_menu ul.first_button_overlay,
#gb_menu li.first_button_overlay,
#gb_menu ul.first_button_overlay li.first_button_overlay,
#gb_menu ul.first_button_overlay li.first_button_overlay a.first_button_overlay,
#gb_menu ul.first_button_overlay li.first_button_overlay ul.first_button_overlay {
  width: 100%;
  z-index: 7;
  list-style: none;
  position: absolute;
  margin-top: 1px;
  background: none;
  display: block;
  border: 0px;
}

#gb_menu ul.first_button_overlay li.first_button_overlay {
  background: #99CE48;
}

li.first_button_overlay {
  background: none;
  line-height: 22px;
  text-align: left;
  text-indent: 12px;
  color: #3A3A3A;
  width: 100%;
  height: 22px;
  border: 0px;
}

a.top_button {
  position: relative;
  text-align: center;
}

a.top_button:hover div.first_button_overlay {
  display: block;
}

#gb_menu li.overlay_last {
  -webkit-border-radius: 0px 0px 8px 8px;
  -moz-border-radius: 0px 0px 8px 8px;
  border-radius: 0px 0px 8px 8px;
}

#gb_menu li.section_start {
  border-top: 1px solid #b0b0b0;
}

#gb_menu .pointy {
  background: url('/img/style/menu_pointy.png') no-repeat;
  display: block;
  height: 15px;
  margin-top: -14px;
  margin-left: 25px;
}

/* Logo */

.logo {
  float:left;
  margin:0px;
}

.logo img {
  margin-top: 0px;
}

.logo a {
}


/* Logout panel */
.logout_panel {
  text-align: right;
  color: #393637;
  float: right;
  margin: 3px 3px 3px 20px;
}

.logout_panel a {
  color: #393637;
}

/* Status panel */
.status_panel {
  color: #FFFFFF;
  float: right;
  margin: 3px;
  margin-right: 15px;
  vertical-align: top;
}

/* Miniicons */
.mini_i {
  float:left;
  margin-right:3px;
}

/* BEGIN Navigation */

#nav ul {
  text-align:left;
  font-size:12px;
  list-style:none;
  padding:0px;
  margin: 0px;
}

#nav li {
  padding:3px;
  text-align:left;
  padding-left:12px;
  margin-left:2px;
  color: #313131;
  font-weight:bold;
  background:url('/img/bullet.png') no-repeat 0px 6px #f9f9f9;
}

#nav a {
  display:block;
  text-align:left;
  color: #313131;
  font-weight:bold;
}

#nav a:hover {
}

#nav li li {
  background:url('/img/bullet2.png') no-repeat 0px 8px #EEEEEE;
  text-align:left;
}

#nav li li a {
}

/* END Navigation */

/* BEGIN Lists */

#list ul {
  list-style:none;
  padding:0px;
  margin: 0px;
  padding-left:4px;
  margin-left:18px;
}

#list li {
  padding:4px;
  padding-left:13px;
  margin-left:8px;
  background:url('/img/bullet.png') no-repeat 0px 9px;
  border:0px;
}

#list li li {
}

#list a {
}

/* END Lists */

#download ul {
  font-size:12px;
  list-style:none;
  padding:0px;
  margin: 0px;
}

#download li {
}
/* ... */

